--- a/index.html
+++ b/index.html
@@ -1,234 +1,74 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>UI 예제</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/layout.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>반응형 UI</title>
+	<link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
-    <!-- 
-        <div class="tabgroup">
-            <div class="tabmenu">
-                <h2><a href="#">공지사항</a></h2>
-                <ul>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                </ul>
-                <a href="#" class="more" title="공지사항 더보기">더보기</a>
-            </div>
-            <div class="tabmenu">
-                <h2><a href="#">FAQ</a></h2>
-                <ul>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                </ul>
-                <a href="#" class="more" title="FAQ 더보기">더보기</a>
-            </div>
-        </div>
-
-
-        <div class="tabgroup">
-            <dl>
-                <dt><a href="#">공지사항</a></dt>
-                <dd class="tabmenu">
-                    <ul>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    </ul>
-                    <a href="#" class="more" title="공지사항 더보기">더보기</a>
-                </dd>
-                <dt><a href="#">FAQ</a></dt>
-                <dd class="tabmenu">
-                    <ul>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    </ul>
-                    <a href="#" class="more" title="FAQ 더보기">더보기</a>
-                </dd>
-            </dl>
-        </div>
-
-        <div class="tabgroup">
-            <ul class="tabmenu">
-                <li>
-                    <a href="#">공지사항</a>
-                    <ul>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    </ul>
-                    <a href="#" class="more" title="공지사항 더보기">더보기</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                    <ul>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                    </ul>
-                    <a href="#" class="more" title="FAQ 더보기">더보기</a>
-                </li>
-            </ul>
-        </div>
-
-
-        <div class="cbody">
-            <ul class="tabmenu">
-                <li class="on"><a href="#">메뉴1</a></li>
-                <li><a href="#">메뉴2</a></li>
-                <li><a href="#">메뉴3</a></li>
-                <li><a href="#">메뉴4</a></li>
-                <li><a href="#">메뉴5</a></li>
-            </ul>
-            <div class="tabcnt on">
-                메뉴1 콘텐츠 내용
-            </div>
-            <div class="tabcnt">
-                메뉴2 콘텐츠 내용
-            </div>
-            <div class="tabcnt">
-                메뉴3 콘텐츠 내용
-            </div>
-            <div class="tabcnt">
-                메뉴4 콘텐츠 내용
-            </div>
-            <div class="tabcnt">
-                메뉴5 콘텐츠 내용
-            </div>
-        </div>
-
-
-     -->
-
-    <div class="tabgroup">
-        <div class="tabmenu on">
-            <h2><a href="#">공지사항</a></h2>
-            <ul>
-                <li><a href="#">공지사항 글입니다.공지사항 글입니다.공지사항 글입니다.공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-            </ul>
-            <a href="#" class="more" title="공지사항 더보기">더보기</a>
-        </div>
-        <div class="tabmenu">
-            <h2><a href="#">FAQ</a></h2>
-            <ul>
-                <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-            </ul>
-            <a href="#" class="more" title="FAQ 더보기">더보기</a>
-        </div>
-    </div>
-
-
-<div class="tabgroup">
-    <dl class="tab">
-        <dt class="tabtit on"><a href="#">공지사항</a></dt>
-        <dd class="tabcnt on">
-            <ul>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-            </ul>
-            <a href="#" class="more" title="공지사항 더보기">더보기</a>
-        </dd>
-        <dt class="tabtit"><a href="#">FAQ</a></dt>
-        <dd class="tabcnt">
-            <ul>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-                <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-            </ul>
-            <a href="#" class="more" title="FAQ 더보기">더보기</a>
-        </dd>
-    </dl>
-</div>
-
-
-<div class="tabgroup">
-  <div class="tab">
-    <h2 class="tabtit on"><a href="#">공지사항</a></h2>
-     <div class="tabcnt on">
-      <ul>
-        <li><a href="#">공지사항 글입니다.공지사항 글입니다.공지사항 글입니다.공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-        <li><a href="#">공지사항 글입니다.</a><span class="date">2019.05.21</span></li>
-      </ul>
-      <a href="#" class="more" title="공지사항 더보기">더보기</a>
-      </div>
-      <div class="tabmenu">
-        <h2 class="tabtit"><a href="#">FAQ</a></h2>
-        <div class="tabcnt">
-          <ul>
-            <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-            <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-            <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-            <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-            <li><a href="#">FAQ 글입니다.</a><span class="date">2019.05.21</span></li>
-          </ul>
-        <a href="#" class="more" title="FAQ 더보기">더보기</a>
-      </div>
-  </div>
-  <!-- //.tab -->
-</div>
-<!-- //.tabgroup -->
-
-
-
-
-<div class="cbody">
-  <ul class="tapmenu">
-    <li class="on"><a href="#">메뉴1</a></li>
-    <li class="on"><a href="#">메뉴2</a></li>
-    <li class="on"><a href="#">메뉴3</a></li>
-    <li class="on"><a href="#">메뉴4</a></li>
-    <li class="on"><a href="#">메뉴5</a></li>
-  </ul>
-  <div class="tapcnt on">
-    메뉴1 콘텐츠 내용
-  </div>
-  <div class="tapcnt">
-    메뉴2 콘텐츠 내용
-  </div>
-  <div class="tapcnt">
-    메뉴3 콘텐츠 내용
-  </div>
-  <div class="tapcnt">
-    메뉴4 콘텐츠 내용
-  </div>
-  <div class="tapcnt">
-    메뉴5 콘텐츠 내용
-  </div>
-</div>
+	<div class="header">
+		<h1 class="logo"><a href="#"><img src="image/logo.png" alt="LOGO"></a></h1>
+		<nav class="nav">
+			<a href="#">포트폴리오</a>
+			<a href="#">스킬</a>
+			<a href="#">자기소개</a>
+		</nav>
+	</div>
+	<!-- //.header -->
+	<div class="container">
+		<div class="portfolio">
+			<img src="image/img1.jpg" alt="">
+			<div class="txt">
+				<em>portfolio</em>
+				<strong>포트폴리오</strong>
+			</div>
+			<a href="#" class="more">더보기</a>
+		</div>
+		<div class="html5">
+			<!-- <img src="image/gallery2.jpg" alt=""> -->
+			<div class="txt">
+				<em>HTML5</em>
+				<strong>Hypertext Markup Language</strong>
+				<a href="#" class="more">더보기</a>
+			</div>
+		</div>
+		<div class="css3">
+			<!-- <img src="image/gallery3.jpg" alt=""> -->
+			<div class="txt">
+				<em>CSS3</em>
+				<strong>Cascading Style Sheets</strong>
+				<a href="#" class="more">더보기</a>
+			</div>
+		</div>
+		<div class="less">
+			<img src="image/less.jpg" alt="">
+		</div>
+		<div class="js">
+			<img src="image/js.jpg" alt="">
+		</div>
+		<div class="svn">
+			<img src="image/svn.jpg" alt="">
+		</div>
+		<div class="git">
+			<img src="image/git.jpg" alt="">
+		</div>
+	</div>
+	<!-- //.container -->
+	<div class="footer">
+		<div class="footerwrap">
+			<p class="copy">
+				<span>COPYRIGHT 2019 &copy; Portfolio site.</span>
+				<span>Website design by <b>Portfolio</b></span>
+			</p>
+			<div class="sns">
+				<a href="#" class="facebook"><img src="image/icon_facebook.png" alt="페이스북"></a>
+				<a href="#" class="insta"><img src="image/icon_insta.png" alt="인스타그램"></a>
+				<a href="#" class="twitter"><img src="image/icon_twitter.png" alt="트위터"></a>
+			</div>
+		</div>	
+	</div>
+	<!-- //.footer -->
 </body>
 </html>
